<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activitys.LoguinActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/skate_is_life" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextEmailLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/EditTextView_textColor_padrao"
        android:textColorHint="@color/blue_hint"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPasswordLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:maxLength="15"
        android:maxLines="1"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/EditTextView_textColor_padrao"
        android:textColorHint="@color/blue_hint"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="@color/cor_padrao_blue_dark"
        android:text="@string/textBtn_Logar"
        app:rippleColor="@color/rippleColorBtn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:onClick="activityCadastrarUser"
        android:text="Não tem conta? Cadastre-se."
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />
</LinearLayout>